<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="menu_add_crime">Add Crime</string>
    <string name="menu_item_clear">Clear</string>
    <string name="menu_item_show_subtitle">Show Subtitle</string>
    <string name="menu_item_hide_subtitle">Hide Subtitle</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hint_username">UserName</string>
    <string name="text_login">Login</string>
    <string name="text_sing_up">Sign Up</string>
    <string name="userText"></string>
    <string name="passwordText"></string>
    <string name="userTextSignUp"></string>
    <string name="passwordSignUp"></string>
    <string name="successful_message">LogIn was successful</string>
    <string name="non_successful_message">user or password is incorrect</string>
    <string name="message_signup">Please username and password</string>
    <string name="message_not_sign_up">you not sign up</string>
    <string name="message_find_false">you can not input and password correct</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_call_suspect_text">Call %s</string>
    <string name="crime_dial_suspect_text">Dial %s</string>
    <string name="crime_call_no_suspect_text">Call</string>
    <string name="crime_dial_no_suspect_text">Dial</string>


    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

</resources>